--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,35 @@
-.App {
-  text-align: center;
+
+@import url('https://fonts.googleapis.com/css2?family=Newsreader:wght@500&display=swap');
+.app {
+    display: grid;
+    place-items: center; 
+    height: 100vh;
+    background-color: #dadbd3;
+    font-family: 'Newsreader', serif;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app_body{
+    display: flex;
+    background-color: #ededed;
+    
+    width: 75vw;
+    height: 90vh;
+    box-shadow: -1px 4px 20px -6px rgba(0, 0, 0, 0.75);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media only screen and (max-width: 768px) {
+    .app{
+        height: 200vh;
+        width: 138vh;
+        margin-right: auto
+        
+    }
+    .app_body{
+        display: flex;
+    background-color: #ededed;
+    width: 190vw;
+    height: 102vh;
+    box-shadow: -1px 4px 20px -6px rgb(0 0 0 / 75%);
+    }
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
